[gd_scene load_steps=9 format=3 uid="uid://dnaol20pgmvt8"]

[ext_resource type="Script" path="res://base_character.gd" id="1_tcw2m"]
[ext_resource type="Script" path="res://popup_location.gd" id="2_ipw5o"]
[ext_resource type="PackedScene" uid="uid://cqpqjc8jnyd4k" path="res://floating_numbers.tscn" id="3_ym6vb"]
[ext_resource type="Texture2D" uid="uid://lqonvk8d3x1d" path="res://Assets/hpbar.png" id="4_5ntxk"]
[ext_resource type="Script" path="res://level_system.gd" id="5_t442t"]
[ext_resource type="Script" path="res://skill_name_location.gd" id="6_piguk"]
[ext_resource type="PackedScene" uid="uid://qg1mucamym17" path="res://skill_name_popup.tscn" id="7_qaodm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t6ned"]
radius = 15.0
height = 70.0

[node name="BaseCharacter" type="CharacterBody2D" node_paths=PackedStringArray("attack_timer")]
motion_mode = 1
script = ExtResource("1_tcw2m")
attack_timer = NodePath("Timer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_t6ned")

[node name="HP" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PopupLocation" type="Marker2D" parent="."]
position = Vector2(-1, -21)
script = ExtResource("2_ipw5o")
damage_node = ExtResource("3_ym6vb")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(4.5, -33.75)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_5ntxk")

[node name="HealthProgressBAr" type="ProgressBar" parent="."]
self_modulate = Color(0, 1, 0.00392157, 1)
z_index = 2
offset_left = -35.0
offset_top = -38.0
offset_right = 45.0
offset_bottom = -29.0
show_percentage = false

[node name="LevelSystem" type="Node" parent="."]
script = ExtResource("5_t442t")

[node name="LevelLabel" type="Label" parent="."]
offset_left = -27.0
offset_top = -55.0
offset_right = 13.0
offset_bottom = -32.0

[node name="SkillNameLocation" type="Marker2D" parent="."]
position = Vector2(0, -50)
script = ExtResource("6_piguk")
skill_name_shout = ExtResource("7_qaodm")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
